2003-09-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (ReadTIFFImage): When using the generic bit-stream
	marshaller to read colormapped/gray images, the slight performance
	improvement from creating a special case for matte images did not
	justify almost doubling the amount of code.  Therefore, the two
	loops are combined back into one.

2003-09-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (ReadTIFFImage): Fixed reading grayscale TIFFs
	that have a transparency channel. Now uses a generic bit-stream
	marshaller to allow reading any grayscale or colormapped TIFF with
	any bits per sample in the range of 1 to 16.
	* magick/bit_stream.h: Added a generic implementation for
	marshalling from a bit-stream into a quantum.  Still needs
	re-writing for best performance.
	* PerlMagick/t/tiff/read.t: Added a test case for reading 8-bit
	grayscale TIFF with matte.  Corrected grayscale 12-bit read
	signatures.  Added 16 color PseudoClass read test.  Added 4-bit
	grayscale read test.

2003-09-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (WriteTIFFImage): Add support for writing
	DirectClass grayscale images at 4 bits per sample, including those
	with an opacity channel.  This allows writing smaller files
	(half the size) when the image has 16 (or less) levels of gray.
        Use "gm convert inimage.tiff -depth 4 outimage.tiff" to quickly
	create grayscale TIFF file with 16 (or less) levels of
	gray.

2003-09-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* NEWS: Updated NEWS file with changes since last update.
	* index.html: Added a link to the www/AUTHORS.html file, as well
	as text stating that GraphicsMagick is originally derived from
	ImageMagick 5.5.2, with a link to the ImageMagick site.
	* Makefile.am: Add rules to generate www/AUTHORS.html.
	* www/AUTHORS.html: New HTML file based on the AUTHORS file in the
	source package.  GraphicsMagick has many authors.
