@@ -1103,29 +1103,29 @@ static Image *ReadBMPImage(const ImageInfo *image_info,ExceptionInfo *exception)
             green=((pixel & bmp_info.green_mask) << shift.green) >> 16;
             blue=((pixel & bmp_info.blue_mask) << shift.blue) >> 16;
             opacity=((pixel & bmp_info.alpha_mask) << shift.opacity) >> 16;
-            q->red=ScaleShortToQuantum(red);
             if (quantum_bits.red == 5)
-              q->red|=(q->red >> 5);
-            q->green=ScaleShortToQuantum(green);
+              red|=((red & 0xe000) >> 5);
             if (quantum_bits.green == 5)
-              q->green|=(q->green >> 5);
+              green|=((green & 0xe000) >> 5);
             if (quantum_bits.green == 6)
-              q->green|=(q->green >> 6);
-            q->blue=ScaleShortToQuantum(blue);
+              green|=((green & 0xc000) >> 6);
             if (quantum_bits.blue == 5)
-              q->blue|=(q->blue >> 5);
-            if (image->matte)
-              q->opacity=ScaleShortToQuantum(opacity);
-#if (QuantumDepth > 8)
+              blue|=((blue & 0xe000) >> 5);
             if (quantum_bits.blue <= 8)
-              q->blue|=((q->blue & 0xff00) >> 8);
+              blue|=((blue & 0xff00) >> 8);
             if (quantum_bits.green <= 8)
-              q->green|=((q->green & 0xff00) >> 8);
+              green|=((green & 0xff00) >> 8);
             if (quantum_bits.red <= 8)
-              q->red|=((q->red & 0xff00) >> 8);
-            if (quantum_bits.opacity <= 8)
-              q->opacity|=((q->opacity & 0xff00) >> 8);
-#endif
+              red|=((red & 0xff00) >> 8);
+            if (image->matte != False)
+              {
+                if (quantum_bits.opacity <= 8)
+                  q->opacity|=((q->opacity & 0xff00) >> 8);
+                q->opacity=ScaleShortToQuantum(opacity);
+              }
+            q->red=ScaleShortToQuantum(red);
+            q->green=ScaleShortToQuantum(green);
+            q->blue=ScaleShortToQuantum(blue);
             q++;
           }
           if (!SyncImagePixels(image))
