@@ -1,3 +1,8 @@
+2003-09-30  Glenn Randers-Pehrson <randeg@alum.rpi.edu>
+
+	* coders/bmp.c (ReadBMPImage): scaling of 5-5-5-bit and 5-6-5-bit
+	images was slightly incorrect.
+
 2003-09-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* coders/tiff.c (ReadTIFFImage): When using the generic bit-stream
